add some cup gram conversion values

--- a/index.html
+++ b/index.html
@@ -83,7 +83,27 @@
             <h5>Your Flour</h5>
             <div class="LabelConversion">
               <span class="label">Grams per Cup:</span>
-              <input id="targetgramspercup" type="text" value="125"> grams
+              <input id="targetgramspercup" type="text" value="120"> grams
+            </div>
+
+            <!-- https://www.bobsredmill.com/blog/featured-articles/bobs-red-mill-flour-weight-chart/ -->
+            <h5>Bob<span class="SpecialChar">'</span>s Red Mill</h5>
+            <div class="LabelConversion">
+              <span class="label">Artisan Bread Flour</span> 144 grams
+              <span class="label">White All-Purpose Flour</span> 136 grams
+              <span class="label">White Pastry Flour</span> 136 grams
+              <span class="label">Whole Wheat Flour</span> 152 grams
+              <span class="label">Whole Wheat Pastry Flour</span> 120 grams
+            </div>
+
+            <!-- https://www.kingarthurflour.com/learn/ingredient-weight-chart -->
+            <h5>King Arthur Flour</h5>
+            <div class="LabelConversion">
+              <span class="label">Bread Flour</span> 120 grams
+              <span class="label">All-Purpose Flour</span> 120 grams
+              <span class="label">Pastry Flour</span> 106 grams
+              <span class="label">Whole Wheat Flour</span> 113 grams
+              <span class="label">Whole Wheat Pastry Flour</span> 96 grams
             </div>
 
           </form>
